--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
 body {
   background-color: orange;
 }
+
+.show {
+  display: flex;
+}
+
+.textarea {
+  background-color: rgba(192, 192, 192, 0.682);
+  color: black;
+  font-size: 1rem;
+}
